--- a/style.css
+++ b/style.css
@@ -73,211 +73,20 @@ position: absolute;
     display: flex;
 }
 
-
-.largo-izq {
-    position: relative;
-    margin-top: 50px;
-    margin-left: 30px;
-    border: solid black 0.1em;
-    height: 1000px;
-    width: 200px;
-    background-color: black;
-}
-
-.largo-der{
-    position: relative;
-    margin-top: -1000px;
-    margin-left: 1600px;
-    border: solid black 0.1em;
-    height: 1000px;
-    width: 200px;
-    background-color: black;
-}
-
-.informacion1{
-
-    z-index: 10;
-    background-color: white;
-    height: 400px;
-    width: 400px;
-    margin-top: -950px;
-    margin-left: 350px;
-    background-color: lightgreen;
-}
-
-img{
-    margin-left: 15px;
-    margin-top: 10px;
+.informacion{
+    position:relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100px;
+    width: 1525px;
+    border: solid 0.1em black;
+    margin-left: 100px;
+    display: grid | inline-grid;
 }
 
 .a1{
-    background-color:lightgreen;
-    margin-top: -3px;
-}
-
-.informacion2{
-    height: 350px;
-    width: 280px;
-    margin-top: -400px;
-    margin-left: 1200px;
-    background-color:goldenrod;
-}
-
-.a2{
-    background-color:goldenrod;
-    margin-top: -3px;
-}
-
-
-.informacion3{
-    margin-top: 150px;
-    margin-left: 360px;
-    height: 350px;
-    width: 350px;
-    background-color: brown;
- 
-}
-
-
-.a3{
-    background-color: brown;
-    width: 250px;
-    height: 100px;
-    margin-top: 50px;
-    margin-left: 20px;
-}
-
-.informacion4{
-    margin-top: -850px;
-    margin-left: 800px;
-    height: 350px;
-    width: 350px; 
-    text-align: center;
-    background-color: palevioletred;
-}
-
-.a4{
-background-color: palevioletred;
-}
-
-.informacion5{
-    height: 350px;
-    width: 350px;
-    margin-top: 150px;
-    margin-left: 800px;
-    background-color: gray;
-    text-align: center;
-}
-
-.a5{
-    background-color: gray;
-}
-
-
-.container1{
-    position: absolute;
-    height: 100px;
-    width: 1000px;
-    margin-top: 100px;
-    margin-left: 300px;
-}
-
-.informacion6{
-    margin-top: 100px;
-    text-align: center;
-    background-color: green;
-    height: 450px;
-    width: 500px;
-}
-
-.a6{
-    background-color: green;
-}
-
-.informacion7{
-    height: 450px;
-    margin-top: -450px;
-    margin-left: 600px; 
-    background-color: cyan;
-}
-
-.a7{
-    background-color: cyan;
-}
-
-.informacion8{
-    margin-top: 15px;
-    text-align: center;
-    background-color: plum;
-    width: 500px;
-    height: 500px;
-}
-
-.a8{
-    background-color: plum;
-}
-
-
-
-.largo-der1{
-    position: relative;
-    margin-top: -1170px;
-    margin-left: 1300px;
     border: solid black 0.1em;
-    height: 1200px;
-    width: 200px;
-    background-color: black;
-
 }
-
-.largo-izq1{
-    position: relative;
-    margin-top: -1070px;
-    margin-left: -270px;
-    border: solid black 0.1em;
-    height: 1000px;
-    width: 200px;
-    background-color: black;
-}
-
-#conteItemsCarrusel{
-    border: 5px solid black;
-    height: 200px;
-    overflow: hidden;
-}
-
-.itemCarrusel{
-    border: 1px solid black;
-    height: 100%;
-    position: relative;
-}
-
-.tarjetaCarrusel{
-    height: 100%;
-}
-
-.flechasCarrusel{
-    background-color: yellow;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    position: absolute
-}
-
-#tarjetaCarrusel-1{
-    background-color: blue;
-}
-
-#tarjetaCarrusel-2{
-    background-color: cornflowerblue;
-}
-
-#tarjetaCarrusel-3{
-    background-color: cyan;
-}
-
 
