--- a/style.css
+++ b/style.css
@@ -75,18 +75,44 @@ position: absolute;
 
 .informacion{
     position:relative;
-    top: 0;
+    top: 10px;
     bottom: 0;
     left: 0;
     right: 0;
     height: 100px;
     width: 1525px;
-    border: solid 0.1em black;
     margin-left: 100px;
-    display: grid | inline-grid;
+    align-content: stretch;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
+    grid-auto-rows: 100px;
 }
 
 .a1{
-    border: solid black 0.1em;
+    background-color: chartreuse;
+    display: grid;
+    grid-column: 1/ 3;
+    grid-row: 1 / 3;
+    margin-left: 100px;
+    height: 400px;
+    width: 300px;
+    
 }
 
+.a2{
+
+}
+
+.a3{
+   margin-top: 50px;
+}
+
+
+.a4{
+   margin-top: 150px;
+}
+
+.a5{
+    
+}
