--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 /* * { border: 0.1em solid black; } */
-@media (min-width: 600px) {
- 
-}
 
 #body{
     background-color: black;
@@ -57,7 +54,7 @@ left: 300px;
     width: 1850px;
     position: absolute;
     margin-top: 150px;
-    background-color: black;
+    background-color: #424242;
 }
 
 .container2{
@@ -66,7 +63,7 @@ left: 300px;
     background-color: white;
     margin-left: 300px;
     margin-top: 50px;
-    height: 1800px;
+    height: 1900px;
     width: 1200px;
 }
 
@@ -110,7 +107,7 @@ font-size: 25px;
 }
 
 .a3{
-margin-top: 400px;
+margin-top: 320px;
 margin-left: 800px;
 height: 400px;
 width: 300px;
@@ -123,7 +120,7 @@ font-size: 18px;
 
 .informacion1{
     position: relative;
-    top: 800px;
+    top: 900px;
     bottom: 0;
     left: 100px;
     right: 0;
@@ -192,18 +189,14 @@ font-size: 18px;
     border-radius: 2%;
 }
 
-img{
-    border-radius: 2%;
-}
-
 .datos{
-    position: relative;
+    position: absolute;
     width: 1525px;
     height: 500px;
-    top: 900px;
+    top: 1900px;
     bottom: 0;
     left: 0;
-    right: 200px;
+    right: 0;
 }
 
 .correo{
@@ -219,4 +212,94 @@ img{
     height: 100px;
     width: 1000px;
     color: white;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.carrousel{
+    position: absolute;
+    width: 100%;
+    margin-top: 670px ;
+}
+
+.conteCarrousel{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+.itemCarrousel{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.itemCarrouselTarjeta{
+    width: 100%;
+    height: 100%;
+}
+
+.itemCarrouselArrows{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px; 
+}
+
+.itemCarrouselArrows > i:hover {
+    cursor: pointer;
+}
+
+#itemCarrousel-1{
+    background-color: rgb(226, 50, 50);
+}
+
+#itemCarrousel-2{
+    background-color: rgb(50, 200, 226);
+}
+
+#itemCarrousel-3{
+    background-color: rgb(200, 226, 50);
+}
+
+#itemCarrousel-4{
+    background-color: rgb(117, 50, 226);
+}
+
+#itemCarrousel-5{
+    background-color: rgb(226, 50, 211);
+}
+
+.conteCarrouselController{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.conteCarrouselController > a{
+    text-decoration: none;
+    font-size: 2em;
+    color: grey;
+}
+
+.itemCarrouselArrows > a > i{
+    color: white;
+}
+
+@media (min-width: 600px) {
+
+    .container{
+        grid-template-columns: auto;
+    }
 }
